# sturdy-donkey

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE-3RD-PARTIES  Makefile  README.md  common.Makefile  launch-ci  linux.Makefile  macos.Makefile
base/: CMakeLists.txt
base/include/: Buffer.hpp  BufferPool.hpp  GBufferPass.hpp  Game.hpp  GameManager.hpp  IPageAllocator.hpp  IRenderPass.hpp  IResourceLoaderDelegate.hpp  ISimulationModule.hpp  MeshLoader.hpp  Scene.hpp  StackAllocator.hpp  StackAllocator.inl  StackVector.hpp  UnixPageAllocator.hpp  WindowsPageAllocator.hpp  build.hpp  common.hpp  debug.hpp  hash.hpp
base/include/render/: AMaterial.hpp  AMaterial.inl  CommandBucket.hpp  DeferredRenderer.hpp  FramePacket.hpp  FramePacket.inl  Framebuffer.hpp  GBufferPass.hpp  GpuBuffer.hpp  GpuProgram.hpp  GpuResourceManager.hpp  IRenderPass.hpp  Material.hpp  Mesh.hpp  Pipeline.hpp  PipelineGenerator.hpp  RenderPass.hpp  RenderTarget.hpp  Resource.hpp  ResourceManager.hpp  ScalarMaterialSlot.hpp  ScalarMaterialSlot.inl  State.hpp  Texture.hpp  TextureMaterialSlot.hpp  UniformBlock.hpp  Window.hpp  core_renderer.hpp  pixel.hpp
base/include/render/gl/: Driver.hpp  Framebuffer.hpp  GpuProgram.hpp  Material.hpp  Mesh.hpp  ResourceManager.hpp  State.hpp  Texture.hpp
base/src/: Buffer.cpp  BufferPool.cpp  GBufferPass.cpp  Game.cpp  GameManager.cpp  MeshLoader.cpp  Scene.cpp  StackAllocator.cpp  UnixPageAllocator.cpp  WindowsPageAllocator.cpp
base/src/render/: AMaterial.cpp  AResourceManager.cpp  CommandBucket.cpp  DeferredRenderer.cpp  GBufferPass.cpp  Mesh.cpp  Pipeline.cpp  PipelineGenerator.cpp  RenderPass.cpp  ResourceManager.cpp  TextureMaterialSlot.cpp  Window.cpp  core_renderer.cpp
base/src/render/gl/: Driver.cpp  Material.cpp  Mesh.cpp  ResourceManager.cpp  State.cpp  Texture.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  Findgl3w.cmake  Findglm.cmake
editor/: CMakeLists.txt
editor/include/: ResourceLoaderDelegate.hpp
editor/src/: ResourceLoaderDelegate.cpp  main.cpp
examples/boulders/: .gitignore  Makefile
examples/boulders/include/: ResourceLoaderDelegate.hpp
examples/boulders/src/: ResourceLoaderDelegate.cpp  main.cpp
examples/quad/: Makefile  quad
examples/quad/include/: ResourceLoaderDelegate.hpp
examples/quad/src/: ResourceLoaderDelegate.cpp
include/: Buffer.hpp  BufferPool.hpp  Demo.hpp  Game.hpp  GameManager.hpp  IResourceLoaderDelegate.hpp  Material.hpp  Material.inl  MeshLoader.hpp  ResourceManager.hpp  ScalarMaterialSlot.hpp  ScalarMaterialSlot.inl  Scene.hpp  StackAllocator.hpp  StackVector.hpp  TextureMaterialSlot.hpp  WindowsPageAllocator.hpp  build.hpp  common.hpp  debug.hpp  hash.hpp
include/render/: AMaterial.hpp  AMaterial.inl  AResourceManager.hpp  CommandBucket.hpp  DebugHudRenderer.hpp  DeferredRenderer.hpp  FramePacket.hpp  FramePacket.inl  GpuProgram.hpp  GpuResourceManager.hpp  Material.hpp  Material.inl  Mesh.hpp  RenderPass.hpp  RenderTarget.hpp  Resource.hpp  ResourceManager.hpp  ScalarMaterialSlot.hpp  ScalarMaterialSlot.inl  Texture.hpp  TextureMaterialSlot.hpp  Window.hpp  pixel.hpp
include/render/gl/: Driver.hpp  GpuProgram.hpp  Material.hpp  Mesh.hpp  ResourceManager.hpp  State.hpp  Texture.hpp
shaders/: .gitignore  CMakeLists.txt  albedo-pass.frag.glsl  albedo-pass.frag.glsl.m4  ambient-pass.frag.glsl  ambient-pass.frag.glsl.m4  deferred-gbuffer-pass-fs.glsl  deferred-gbuffer-pass-vs.glsl  deferred-light-pass-fs.glsl  gbuffer-pass.frag.glsl  gbuffer-pass.frag.glsl.m4  gbuffer-pass.vert.glsl  gbuffer-pass.vert.glsl.m4  light-pass.frag.glsl  light-pass.frag.glsl.m4  simple-fs.glsl  simple-vs.glsl
src/: Buffer.cpp  BufferPool.cpp  Demo.cpp  Game.cpp  GameManager.cpp  Material.cpp  MeshLoader.cpp  ResourceManager.cpp  ScalarMaterialSlot.cpp  Scene.cpp  StackAllocator.cpp  TextureMaterialSlot.cpp  UnixPageAllocator.cpp  main.cpp
src/render/: AMaterial.cpp  AResourceManager.cpp  CommandBucket.cpp  DebugHudRenderer.cpp  DeferredRenderer.cpp  FramePacket.cpp  Material.cpp  Mesh.cpp  RenderPass.cpp  ResourceManager.cpp  ScalarMaterialSlot.cpp  TextureMaterialSlot.cpp  Window.cpp  albedo_pass.cpp  gbuffer_pass.cpp  light_pass.cpp
src/render/gl/: Driver.cpp  Material.cpp  Mesh.cpp  ResourceManager.cpp  State.cpp  Texture.cpp
test/: CMakeLists.txt  simple_test.cpp
